[gd_scene load_steps=24 format=4 uid="uid://b6cftp27aurfq"]

[ext_resource type="Script" uid="uid://lwxfpf3thyx7" path="res://Scenes/Game.gd" id="1_k35fw"]
[ext_resource type="Texture2D" uid="uid://dfel0aes48imb" path="res://Assets/Backgrounds/background_Forest.png" id="2_c02se"]
[ext_resource type="Texture2D" uid="uid://hoctbpgkcdwh" path="res://Assets/Mossy/Mossy - TileSet.png" id="3_1537k"]
[ext_resource type="Texture2D" uid="uid://dlcpckdt26rft" path="res://Assets/Level_Buttons/png/Button.png" id="4_5o5kr"]
[ext_resource type="PackedScene" uid="uid://dg5mh5nq5l7bd" path="res://Scenes/barrack.tscn" id="5_gmfyt"]
[ext_resource type="PackedScene" uid="uid://blq3vnyd4ngwl" path="res://Scenes/Blob.tscn" id="6_2jyfw"]
[ext_resource type="AudioStream" uid="uid://ey1hlhydapu0" path="res://Assets/Audio/Sound Affects/Sending_Sound_1.mp3" id="8_xtidu"]
[ext_resource type="AudioStream" uid="uid://c01jpf2618w14" path="res://Assets/Audio/Sound Affects/Sending_Sound_2.mp3" id="9_s76kx"]
[ext_resource type="AudioStream" uid="uid://ctcat2jnnkg7d" path="res://Assets/Audio/Sound Affects/Sneeze_Sound.mp3" id="10_kv2it"]
[ext_resource type="AudioStream" uid="uid://boungejtfy4ig" path="res://Assets/Audio/Sound Affects/Upgrading_Sound_1.mp3" id="11_qjtqt"]
[ext_resource type="AudioStream" uid="uid://osddeaxiwg0y" path="res://Assets/Audio/Sound Affects/Upgrading_Sound_2.mp3" id="12_rrvfs"]
[ext_resource type="AudioStream" uid="uid://nrro6uqvh6ve" path="res://Assets/Audio/Sound Affects/Level_Cleared_Sound.mp3" id="13_52aqo"]
[ext_resource type="AudioStream" uid="uid://llv5vtoj2b31" path="res://Assets/Audio/Sound Affects/Losing_Sound.mp3" id="14_y6pe4"]
[ext_resource type="AudioStream" uid="uid://d3glomy1o43uq" path="res://Assets/Audio/Music/Music_3.mp3" id="15_k35fw"]
[ext_resource type="PackedScene" uid="uid://clrjds8qnba1k" path="res://Scenes/Game_menu.tscn" id="16_kw17g"]
[ext_resource type="PackedScene" uid="uid://d4cxn2y7o0gvd" path="res://Scenes/Level_Cleared.tscn" id="17_4ucso"]
[ext_resource type="PackedScene" uid="uid://yaxw20rtcrx6" path="res://Scenes/Lost_Screen.tscn" id="18_rgdty"]
[ext_resource type="PackedScene" uid="uid://di0nvb3dehp0b" path="res://Scenes/AI.tscn" id="19_b2283"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_qxw0v"]
vertices = PackedVector2Array(159.508, -85.5, 163.477, 83.5, 148.5, 24.4219, 148.297, 14.3516, 148.297, 4.10156, 128.18, 24.6172, 138.242, 24.4063, 71.5, 84.3281, 71.5, 29.2188, 71.5, -15.8594, 71.5, -86.3203, 138.227, 4.29688, 127.977, 4.29688, 71.7031, -6.29688, 128.18, 13.8594, 71.7031, 19.6563, -71.7031, 19.6563, -71.5, 29.2188, -127.977, 24.4219, -128.18, 14.8594, -128.18, 4.10156, -138.227, 24.4063, -71.5, 85.6484, -163.492, 86.4922, -148.297, 24.6172, -148.297, 14.3672, -160.5, -88.4922, -148.5, 4.29688, -138.25, 4.29688, -71.5, -87.6563, -71.5, -15.8594, -71.7031, -6.29688)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3, 4), PackedInt32Array(5, 6, 2, 1, 7, 8), PackedInt32Array(9, 10, 0, 4, 11, 12, 13), PackedInt32Array(14, 5, 8, 15, 12), PackedInt32Array(16, 17, 18, 19, 20), PackedInt32Array(21, 18, 17, 22, 23, 24), PackedInt32Array(25, 24, 23, 26, 27), PackedInt32Array(20, 28, 27, 26, 29, 30, 31), PackedInt32Array(31, 13, 12, 15, 16, 20)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-161, -89, -164, 87, 164, 84, 160, -86)])
agent_radius = 0.5

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_y1fcd"]
texture = ExtResource("3_1537k")
texture_region_size = Vector2i(256, 256)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-31.2258, 128, -34.5227, -31.3843, 128, -31.2954, 128, 128)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, 128, -128, -31.2954, 128, -31.3843, 128, 128)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, 128, -128, -31.2954, 128, -31.3843, 128, 128)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, 128, -128, -31.2954, 128, -31.3843, 128, 128)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, 128, -128, -31.2954, 128, -31.3843, 128, 128)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -31.2258, 31.3843, -34.5227, 31.2954, 128, -128, 128)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-31.2258, 128, -34.5227, -31.3843, 128, -31.2954, 128, 128)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -31.2258, 31.3843, -34.5227, 31.2954, 128, -128, 128)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(38.5846, 128, 36.441, 40.7282, 128, 38.5846, 128, 128)
9:0/0 = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, 38.5846, -40.7282, 36.441, -38.5846, 128, -128, 128)
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(128, 128, -31.2954, 128, -31.3843, -128, 128, -128)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, 128, -128, 128, 128, -128, 128)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, 128, -128, 128, 128, -128, 128)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, 128, -128, 128, 128, -128, 128)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, 128, -128, 128, 128, -128, 128)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, 31.2954, -128, 31.3843, 128, -128, 128)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(128, 128, -31.2954, 128, -31.3843, -128, 128, -128)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, 31.2954, -128, 31.3843, 128, -128, 128)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(128, -38.5846, 40.7282, -36.441, 38.5846, -128, 128, -128)
9:1/0 = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-38.5846, -128, -36.441, -40.7282, -128, -38.5846, -128, -128)
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(128, 128, -31.2954, 128, -31.3843, -128, 128, -128)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, 128, -128, 128, 128, -128, 128)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, 128, -128, 128, 128, -128, 128)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, 128, -128, 128, 128, -128, 128)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, 128, -128, 128, 128, -128, 128)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, 31.2954, -128, 31.3843, 128, -128, 128)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(128, 128, -31.2954, 128, -31.3843, -128, 128, -128)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, 31.2954, -128, 31.3843, 128, -128, 128)
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-31.2258, 128, -34.5227, -31.3843, 128, -31.2954, 128, 128)
9:2/0 = 0
9:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -31.2258, 31.3843, -34.5227, 31.2954, 128, -128, 128)
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(128, 128, -31.2954, 128, -31.3843, -128, 128, -128)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, 128, -128, 128, 128, -128, 128)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, 128, -128, 128, 128, -128, 128)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, 128, -128, 128, 128, -128, 128)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, 128, -128, 128, 128, -128, 128)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, 31.2954, -128, 31.3843, 128, -128, 128)
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(128, 128, -31.2954, 128, -31.3843, -128, 128, -128)
7:3/0 = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, 31.2954, -128, 31.3843, 128, -128, 128)
8:3/0 = 0
8:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(128, 31.2258, -31.3843, 34.5227, -31.2954, -128, 128, -128)
9:3/0 = 0
9:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(31.2258, -128, 34.5227, 31.3843, -128, 31.2954, -128, -128)
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(128, 128, -31.2954, 128, -31.3843, -128, 128, -128)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, 128, -128, 128, 128, -128, 128)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, 128, -128, 128, 128, -128, 128)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, 128, -128, 128, 128, -128, 128)
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, 128, -128, 128, 128, -128, 128)
5:4/0 = 0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, 31.2954, -128, 31.3843, 128, -128, 128)
6:4/0 = 0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(128, 128, -31.2954, 128, -31.3843, -128, 128, -128)
7:4/0 = 0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, 31.2954, -128, 31.3843, 128, -128, 128)
8:4/0 = 0
8:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(38.5846, 128, 36.441, 40.7282, 128, 38.5846, 128, 128)
9:4/0 = 0
9:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, 40.7282, -38.5846, 38.5846, -38.5846, 128, -128, 128)
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(128, 31.2258, -31.3843, 34.5227, -31.2954, -128, 128, -128)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(128, -128, 128, 31.2954, -128, 31.3843, -128, -128)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(128, -128, 128, 31.2954, -128, 31.3843, -128, -128)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(128, -128, 128, 31.2954, -128, 31.3843, -128, -128)
4:5/0 = 0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(128, -128, 128, 31.2954, -128, 31.3843, -128, -128)
5:5/0 = 0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(31.2258, -128, 34.5227, 31.3843, -128, 31.2954, -128, -128)
6:5/0 = 0
6:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(128, 31.2258, -31.3843, 34.5227, -31.2954, -128, 128, -128)
7:5/0 = 0
7:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(31.2258, -128, 34.5227, 31.3843, -128, 31.2954, -128, -128)
8:5/0 = 0
8:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(128, -40.7282, 38.5846, -38.5846, 38.5846, -128, 128, -128)
9:5/0 = 0
9:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-40.7282, -128, -38.5846, -38.5846, -128, -38.5846, -128, -128)
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
0:6/0 = 0
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-31.2258, 128, -34.5227, -31.3843, 128, -31.2954, 128, 128)
1:6/0 = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, 128, -128, -31.2954, 128, -31.3843, 128, 128)
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, 128, -128, -31.2954, 128, -31.3843, 128, 128)
3:6/0 = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -31.2258, 31.3843, -34.5227, 31.2954, 128, -128, 128)
4:6/0 = 0
4:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-31.2258, 128, -34.5227, -31.3843, 128, -31.2954, 128, 128)
5:6/0 = 0
5:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -31.2258, 31.3843, -34.5227, 31.2954, 128, -128, 128)
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
0:7/0 = 0
0:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(128, 31.2258, -31.3843, 34.5227, -31.2954, -128, 128, -128)
1:7/0 = 0
1:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(128, -128, 128, 31.2954, -128, 31.3843, -128, -128)
2:7/0 = 0
2:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(128, -128, 128, 31.2954, -128, 31.3843, -128, -128)
3:7/0 = 0
3:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(31.2258, -128, 34.5227, 31.3843, -128, 31.2954, -128, -128)
4:7/0 = 0
4:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(128, 31.2258, -31.3843, 34.5227, -31.2954, -128, 128, -128)
5:7/0 = 0
5:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(31.2258, -128, 34.5227, 31.3843, -128, 31.2954, -128, -128)
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
8:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-31.2258, 128, -34.5227, -31.3843, 128, -31.2954, 128, 128)
9:8/0 = 0
9:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, 128, -128, -31.2954, 128, -31.3843, 128, 128)
10:8/0 = 0
10:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, 128, -128, -31.2954, 128, -31.3843, 128, 128)
11:8/0 = 0
11:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, 128, -128, -31.2954, 128, -31.3843, 128, 128)
12:8/0 = 0
12:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, 128, -128, -31.2954, 128, -31.3843, 128, 128)
13:8/0 = 0
13:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -31.2258, 31.3843, -34.5227, 31.2954, 128, -128, 128)
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
8:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(128, 128, -31.2954, 128, -31.3843, -128, 128, -128)
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
13:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, 31.2954, -128, 31.3843, 128, -128, 128)
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
8:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(128, 128, -31.2954, 128, -31.3843, -128, 128, -128)
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
13:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, 31.2954, -128, 31.3843, 128, -128, 128)
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
8:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(128, 128, -31.2954, 128, -31.3843, -128, 128, -128)
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
13:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, 31.2954, -128, 31.3843, 128, -128, 128)
0:12/0 = 0
0:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(81.5992, 81.5992, 40.7996, 128, -128, 128, -128, -128, 128, -128, 128, 21.969)
1:12/0 = 0
1:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-81.5992, 81.5992, -128, 40.7996, -128, -128, 128, -128, 128, 128, -21.969, 128)
2:12/0 = 0
2:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(81.5992, 81.5992, 40.7996, 128, -128, 128, -128, -128, 128, -128, 128, 21.969)
3:12/0 = 0
3:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-81.5992, 81.5992, -128, 40.7996, -128, -128, 128, -128, 128, 128, -21.969, 128)
4:12/0 = 0
4:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, 128, -128, 128, 128, -128, 128)
5:12/0 = 0
5:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(81.5992, -81.5992, 128, -40.7996, 128, 128, -128, 128, -128, -128, 21.969, -128)
6:12/0 = 0
6:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-81.5992, -81.5992, -40.7996, -128, 128, -128, 128, 128, -128, 128, -128, -21.969)
7:12/0 = 0
7:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, 128, -128, 128, 128, -128, 128)
8:12/0 = 0
8:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(128, 128, -31.2954, 128, -31.3843, -128, 128, -128)
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
13:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, 31.2954, -128, 31.3843, 128, -128, 128)
0:13/0 = 0
0:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(81.5992, -81.5992, 128, -40.7996, 128, 128, -128, 128, -128, -128, 21.969, -128)
1:13/0 = 0
1:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-81.5992, -81.5992, -40.7996, -128, 128, -128, 128, 128, -128, 128, -128, -21.969)
2:13/0 = 0
2:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(81.5992, -81.5992, 128, -40.7996, 128, 128, -128, 128, -128, -128, 21.969, -128)
3:13/0 = 0
3:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-81.5992, -81.5992, -40.7996, -128, 128, -128, 128, 128, -128, 128, -128, -21.969)
4:13/0 = 0
4:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-81.5992, 81.5992, -128, 40.7996, -128, -128, 128, -128, 128, 128, -21.969, 128)
5:13/0 = 0
5:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, 128, -128, 128, 128, -128, 128)
6:13/0 = 0
6:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, 128, -128, 128, 128, -128, 128)
7:13/0 = 0
7:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(81.5992, 81.5992, 40.7996, 128, -128, 128, -128, -128, 128, -128, 128, 21.969)
8:13/0 = 0
8:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(128, 31.2258, -31.3843, 34.5227, -31.2954, -128, 128, -128)
9:13/0 = 0
9:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(128, -128, 128, 31.2954, -128, 31.3843, -128, -128)
10:13/0 = 0
10:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(128, -128, 128, 31.2954, -128, 31.3843, -128, -128)
11:13/0 = 0
11:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(128, -128, 128, 31.2954, -128, 31.3843, -128, -128)
12:13/0 = 0
12:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(128, -128, 128, 31.2954, -128, 31.3843, -128, -128)
13:13/0 = 0
13:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(31.2258, -128, 34.5227, 31.3843, -128, 31.2954, -128, -128)

[sub_resource type="TileSet" id="TileSet_ln4nl"]
tile_size = Vector2i(256, 256)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_y1fcd")

[sub_resource type="AtlasTexture" id="AtlasTexture_eu5mq"]
atlas = ExtResource("4_5o5kr")
region = Rect2(197, 2280, 181, 189)

[sub_resource type="AtlasTexture" id="AtlasTexture_btea2"]
atlas = ExtResource("4_5o5kr")
region = Rect2(606, 2280, 181, 189)

[node name="Game" type="Node2D"]
script = ExtResource("1_k35fw")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -1)
zoom = Vector2(6.18, 6.18)

[node name="Background" type="TextureRect" parent="."]
z_index = -5
offset_left = -590.0
offset_top = -648.0
offset_right = 338.0
offset_bottom = 145.0
texture = ExtResource("2_c02se")
metadata/_edit_use_anchors_ = true

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_qxw0v")

[node name="Layer0" type="TileMapLayer" parent="NavigationRegion2D"]
use_parent_material = true
position = Vector2(0, -1)
scale = Vector2(0.06, 0.06)
tile_map_data = PackedByteArray("AAD8//r/AAACAAIAAAD8//v/AAACAAIAAAD8//z/AAACAAIAAAD8//3/AAACAAIAAAD8//7/AAACAAIAAAD8////AAAHAAEAAED9//r/AAACAAIAAAD9//v/AAACAAIAAAD9//z/AAACAAIAAAD9//3/AAACAAIAAAD9//7/AAACAAIAAAD9////AAAHAAIAAED+//r/AAACAAIAAAD+//v/AAACAAIAAAD+//z/AAACAAIAAAD+//3/AAACAAIAAAD+//7/AAACAAIAAAD+////AAAHAAMAAED///r/AAACAAIAAAD///v/AAACAAIAAAD///z/AAACAAIAAAD///3/AAACAAIAAAD///7/AAACAAIAAAD/////AAAHAAQAAEAAAPr/AAACAAIAAAAAAPv/AAACAAIAAAAAAPz/AAACAAIAAAAAAP3/AAACAAIAAAAAAP7/AAACAAIAAAAAAP//AAAHAAQAAFABAPr/AAACAAIAAAABAPv/AAACAAIAAAABAPz/AAACAAIAAAABAP3/AAACAAIAAAABAP7/AAACAAIAAAABAP//AAAHAAMAAFACAPr/AAACAAIAAAACAPv/AAACAAIAAAACAPz/AAACAAIAAAACAP3/AAACAAIAAAACAP7/AAACAAIAAAACAP//AAAHAAIAAFADAPr/AAACAAIAAAADAPv/AAACAAIAAAADAPz/AAACAAIAAAADAP3/AAACAAIAAAADAP7/AAACAAIAAAADAP//AAAHAAEAAFAEAPr/AAAAAAEAABAEAPv/AAAAAAEAABAEAPz/AAAAAAMAABAEAP3/AAAAAAMAABAEAP7/AAAAAAMAABAEAP//AAAHAAAAAFD7//r/AAAAAAEAAAD7//v/AAAAAAEAAAD7//z/AAAAAAMAAAD7//3/AAAAAAMAAAD7//7/AAAAAAMAAAD7////AAAHAAAAAED7/wYAAAAAAAEAACD8/wYAAAACAAIAACD9/wYAAAACAAIAACD+/wYAAAACAAIAACD//wYAAAACAAIAACAAAAYAAAACAAIAACABAAYAAAACAAIAACACAAYAAAACAAIAACADAAYAAAACAAIAACAEAAYAAAAAAAEAADD7/wUAAAAAAAEAACD8/wUAAAACAAIAACD9/wUAAAACAAIAACD+/wUAAAACAAIAACD//wUAAAACAAIAACAAAAUAAAACAAIAACABAAUAAAACAAIAACACAAUAAAACAAIAACADAAUAAAACAAIAACAEAAUAAAAAAAEAADD7/wQAAAAAAAMAACD8/wQAAAACAAIAACD9/wQAAAACAAIAACD+/wQAAAACAAIAACD//wQAAAACAAIAACAAAAQAAAACAAIAACABAAQAAAACAAIAACACAAQAAAACAAIAACADAAQAAAACAAIAACAEAAQAAAAAAAMAADD7/wMAAAAAAAMAACD8/wMAAAACAAIAACD9/wMAAAACAAIAACD+/wMAAAACAAIAACD//wMAAAACAAIAACAAAAMAAAACAAIAACABAAMAAAACAAIAACACAAMAAAACAAIAACADAAMAAAACAAIAACAEAAMAAAAAAAMAADD7/wIAAAAAAAMAACD8/wIAAAACAAIAACD9/wIAAAACAAIAACD+/wIAAAACAAIAACD//wIAAAACAAIAACAAAAIAAAACAAIAACABAAIAAAACAAIAACACAAIAAAACAAIAACADAAIAAAACAAIAACAEAAIAAAAAAAMAADD7/wEAAAAHAAAAAGD8/wEAAAAHAAEAAGD9/wEAAAAHAAIAAGD+/wEAAAAHAAMAAGD//wEAAAAHAAQAAGAAAAEAAAAHAAQAAHABAAEAAAAHAAMAAHACAAEAAAAHAAIAAHADAAEAAAAHAAEAAHAEAAEAAAAHAAAAAHD2/wAAAAAIAAIAAAD2/wEAAAAIAAMAAAD3/wAAAAAJAAIAAAD3/wEAAAAJAAMAAAAIAAAAAAAIAAIAAAAIAAEAAAAIAAMAAAAJAAAAAAAJAAIAAAAJAAEAAAAJAAMAAAA=")
tile_set = SubResource("TileSet_ln4nl")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Pause_Button" type="TextureButton" parent="."]
z_index = 3
offset_left = 136.0
offset_top = -82.0
offset_right = 150.0
offset_bottom = -67.0
texture_normal = SubResource("AtlasTexture_eu5mq")
texture_pressed = SubResource("AtlasTexture_btea2")
ignore_texture_size = true
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="blobs" type="Node" parent="."]

[node name="Barrack" parent="blobs" instance=ExtResource("5_gmfyt")]
z_index = 0
position = Vector2(-139, -1)
Level = 4
Team = 1
initial_count = 50

[node name="Barrack2" parent="blobs" instance=ExtResource("5_gmfyt")]
z_index = 0
position = Vector2(138, 0)
Level = 1
Team = 2
initial_count = 3

[node name="Blob2" parent="blobs" instance=ExtResource("6_2jyfw")]
position = Vector2(94, 73)

[node name="Blob5" parent="blobs" instance=ExtResource("6_2jyfw")]
position = Vector2(129, 72)

[node name="Blob3" parent="blobs" instance=ExtResource("6_2jyfw")]
position = Vector2(-138, 73)

[node name="Blob4" parent="blobs" instance=ExtResource("6_2jyfw")]
position = Vector2(-107, 73)

[node name="Enemy_Barrack" parent="blobs" instance=ExtResource("5_gmfyt")]
z_index = 0
position = Vector2(-2, 16)
Level = 4
Team = 1
initial_count = 50

[node name="Sounds" type="Node" parent="."]

[node name="Sending_Sound_1" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("8_xtidu")

[node name="Sending_Sound_2" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("9_s76kx")

[node name="Sneeze_Sound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("10_kv2it")

[node name="Upgrading_Sound_1" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("11_qjtqt")

[node name="Upgrading_Sound_2" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("12_rrvfs")

[node name="Level_Cleared_Sound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("13_52aqo")

[node name="Losing_Sound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("14_y6pe4")

[node name="Level_Theme" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("15_k35fw")
volume_db = -14.857
autoplay = true
parameters/looping = true

[node name="Pause" parent="." instance=ExtResource("16_kw17g")]
visible = false
offset_left = -156.0
offset_top = -88.0
offset_right = -156.0
offset_bottom = -88.0
scale = Vector2(0.606148, 0.560707)

[node name="Next_Lvl_Srceen" parent="." instance=ExtResource("17_4ucso")]
visible = false
offset_left = -159.0
offset_top = -90.0
offset_right = -85.2
offset_bottom = -51.48
scale = Vector2(0.61572, 0.575579)

[node name="Lost_Screen" parent="." instance=ExtResource("18_rgdty")]
visible = false
offset_left = -162.0
offset_top = -94.0
offset_right = -88.2
offset_bottom = -55.48
scale = Vector2(0.619384, 0.580521)

[node name="AI" parent="." instance=ExtResource("19_b2283")]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Pause_Button" to="." method="_on_pause_button_pressed"]
